# NTP-Time-JSON-API

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  PLAN.md  PRODUCTION_ACCURACY_PLAN.md  PROJECT_ARCHITECTURE.md  PROJECT_PLAN.md  README.md  benchmark.sh  benchmark_websocket.py  build.rs  check_ntp_accuracy.sh  check_time_diff.sh  compare_times.sh  deny.toml  docker-compose.yml  test_api.sh  test_ntp_direct.rs  test_ntp_failure.sh  test_ntp_servers.sh  test_websocket.html  test_websocket.py
.github/workflows/: ci.yml
examples/: README.md
examples/javascript/: client.js  package.json  websocket_client.js
examples/python/: client.py  client_async.py  requirements.txt  websocket_client.py
examples/rust/: Cargo.toml
examples/rust/src/: client.rs  websocket_client.rs
k8s/: README.md  configmap.yaml  deployment.yaml  prometheus-rules.yaml  service.yaml  servicemonitor.yaml
observability/grafana/dashboards/: http-metrics.json  ntp-health.json
observability/logging/: fluentd-daemonset.yaml  loki-stack-values.yaml
observability/prometheus/: alerts.yaml
proto/: time_service.proto
src/: config.rs  errors.rs  grpc_service.rs  lib.rs  main.rs  metrics.rs  performance.rs  persist.rs  timebase.rs
src/http/: handlers.rs  handlers_admin.rs  middleware.rs  mod.rs  state.rs  websocket.rs
src/ntp/: client.rs  mod.rs  protocol.rs  selection.rs  server.rs  stats.rs  sync.rs
tests/: e2e_http.rs  e2e_manual_override.rs  e2e_metrics.rs  e2e_ntp_udp.rs  e2e_websocket.rs  integration_api.rs
tests/common/: mod.rs
