[package]
name = "ntp-time-json-api"
version = "0.1.0"
edition = "2024"
authors = ["NTP Time API Team"]
description = "Production-ready HTTP service for NTP-derived time as JSON"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP server
axum = { version = "0.8.9", features = ["macros", "ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "timeout", "limit", "request-id", "util", "cors"] }
tower_governor = "0.8.0"
hyper = { version = "1.10.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }

# Async runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
tokio-stream = "0.1.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# NTP client
async-trait = "0.1.89"

# Metrics
prometheus-client = "0.24.1"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Utilities
rand = "0.10.1"
parking_lot = "0.12.5"
socket2 = "0.6.4"
chrono = "0.4.45"
futures-util = "0.3.32"
once_cell = "1.21.4"

# Performance optimization
arc-swap = "1.9.1"
tikv-jemallocator = "0.7.0"

# Security
subtle = "2"

[dev-dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
tokio-test = "0.4.5"
tokio-tungstenite = "0.26.2"
futures-util = "0.3.32"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
